# AAP

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh
data/: config.txt  map.ppm
data/15x15-1/: 15_1_0.ppm  15_1_1.ppm  15_1_2.ppm  15_1_3.ppm  config.txt  map.ppm
data/instance_1/: config.txt  map.ppm
data/instance_11/: config.txt
data/instance_2/: config.txt  map.ppm
data/instance_3/: config.txt
data/instance_4/: map.ppm
data/instance_6/: config.txt  map.ppm
data/instance_7/: config.txt  map.ppm
data/instance_8/: map.ppm
include/: brute_force.hpp  fighterVertexGenerator.hpp  file_io.hpp  filesystem.hpp  genetic_search.hpp  greedy.hpp  mip_formulation.hpp  parser.hpp  simulated_annealing.hpp  unit_test.hpp  utils.hpp
include/Graph/: Edge.hpp  FighterVertex.hpp  FireFighterVertex.hpp  FireVertex.hpp  Graph.hpp  Position.hpp  Vertex.hpp  graph.hpp
include/Test/: graphTest.hpp
log/mip/: date.txt  log_instance_1.txt  log_instance_2.txt  log_instance_3.txt  results.csv
mains/: test.cpp
solution/: result.ppm  result_instance_1.ppm  result_instance_2.ppm
solutions/: result_instance_1.ppm  result_instance_2.ppm
src/: brute_force.cpp  fighterVertexGenerator.cpp  file_io.cpp  genetic_search.cpp  greedy.cpp  main.cpp  mip_formulation.cpp  parser.cpp  simulated_annealing.cpp  utils.cpp
src/Graph/: Edge.cpp  FighterVertex.cpp  FireFighterVertex.cpp  FireVertex.cpp  Graph.cpp  Position.cpp  Vertex.cpp  graph.cpp
src/Test/: graphTest.cpp
src/exec/: main.cpp  mip.cpp  test.cpp  test2.cpp  unit_test.cpp
